# Ben-style

./: CHANGELOG.md  CITATION.cff  LICENSE  Makefile  PROMPT_TEMPLATE.md  README.md  STYLE_GUIDE.md  pyproject.toml
R/: pascoe_data.R  pascoe_phylodynamics.R  pascoe_theme.R
data/: README.md
examples/: acinetobacter_example.py  campylobacter_coli_example.py  phylodynamics_worked_example.R  python_general.py  r_example.R
examples/phylodynamics/: README.md
scripts/: figure_template.py  make_palette_reference.py  make_phylodynamics_preview.py  sync_palette_data.py
src/pascoe_plot_style/: __init__.py  demo.py  export.py  palettes.py  style.py
src/pascoe_plot_style/data/: __init__.py  master.json  palettes.json  presets.json
src/pascoe_plot_style/mplstyles/: __init__.py  pascoe.mplstyle
tests/: test_style.py
