[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pascoe-plot-style"
version = "0.2.0"
description = "A publication-focused styling toolkit for scientific figures"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Ben Pascoe"}]
dependencies = ["matplotlib>=3.7", "numpy>=1.23"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pandas>=1.5"]

[project.scripts]
pascoe-style-demo = "pascoe_plot_style.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pascoe_plot_style = ["data/*.json", "mplstyles/*.mplstyle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
